--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>ReduxIntro</title>
+  <title>Campus Recruitment</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,15 +24,16 @@
 </body>
 
 
+
 <script src="https://www.gstatic.com/firebasejs/3.6.7/firebase.js"></script>
 <script>
   // Initialize Firebase
   var config = {
-    apiKey: "AIzaSyA6ozf67ohbTk9EvSr9gFeX4layz6aN7jA",
-    authDomain: "sample-98876.firebaseapp.com",
-    databaseURL: "https://sample-98876.firebaseio.com",
-    storageBucket: "sample-98876.appspot.com",
-    messagingSenderId: "975075020136"
+    apiKey: "AIzaSyBN4rKYXp-nJOQgih0z5xRxZDTNaXqslkE",
+    authDomain: "fir-hosting-76999.firebaseapp.com",
+    databaseURL: "https://fir-hosting-76999.firebaseio.com",
+    storageBucket: "fir-hosting-76999.appspot.com",
+    messagingSenderId: "676332879619"
   };
   firebase.initializeApp(config);
 </script>
